--- a/src/admin-panel/coverage-edit.html
+++ b/src/admin-panel/coverage-edit.html
@@ -57,7 +57,7 @@
 
         <link rel="icon" href="images/favicon.png" type="image/gif"
             sizes="16x16">
-        <link rel="stylesheet" href="../../assets/css/main.css">
+        <link rel="stylesheet" href="../assets/css/main.css">
     </head>
 
     <body>
@@ -280,7 +280,7 @@
                                                 </p>
                                                 <a href="#" class="edit-icon">
                                                     <img
-                                                        src="../../images/edit.png"
+                                                        src="../images/edit.png"
                                                         class="img-fluid "
                                                         width=20 /></a>
                                             </div>
@@ -321,7 +321,7 @@
                                                 </p>
                                                 <a href="#" class="edit-icon">
                                                     <img
-                                                        src="../../images/edit.png"
+                                                        src="../images/edit.png"
                                                         class="img-fluid "
                                                         width=20 /></a>
                                             </div>
@@ -351,7 +351,7 @@
                                                 </p>
                                                 <a href="#" class="edit-icon">
                                                     <img
-                                                        src="../../images/edit.png"
+                                                        src="../images/edit.png"
                                                         class="img-fluid "
                                                         width=20 /></a>
                                             </div>
@@ -387,7 +387,7 @@
                                                 </p>
                                                 <a href="#" class="edit-icon">
                                                     <img
-                                                        src="../../images/edit.png"
+                                                        src="../images/edit.png"
                                                         class="img-fluid "
                                                         width=20 /></a>
                                             </div>
@@ -423,7 +423,7 @@
             </div>
         </main>
 
-        <script src="../../js/jquery.min.js"></script>
+        <script src="../js/jquery.min.js"></script>
 
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
@@ -435,7 +435,7 @@
             integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
             crossorigin="anonymous">
     </script>
-        <script src="../../js/app.js"></script>
+        <script src="../js/app.js"></script>
         <script>
         $(document).ready(function () {
             const accordion = $('#accordionExample');
