--- a/src/admin-panel/location-coverage-edit.html
+++ b/src/admin-panel/location-coverage-edit.html
@@ -57,7 +57,7 @@
 
         <link rel="icon" href="images/favicon.png" type="image/gif"
             sizes="16x16">
-        <link rel="stylesheet" href="../../assets/css/main.css">
+        <link rel="stylesheet" href="../assets/css/main.css">
     </head>
 
     <body>
@@ -282,7 +282,7 @@
                                                 </p>
                                                 <a href="#" class="edit-icon">
                                                     <img
-                                                        src="../../images/edit.png"
+                                                        src="../images/edit.png"
                                                         class="img-fluid "
                                                         width=20 /></a>
                                             </div>
@@ -329,7 +329,7 @@
                                                 </p>
                                                 <a href="#" class="edit-icon">
                                                     <img
-                                                        src="../../images/edit.png"
+                                                        src="../images/edit.png"
                                                         class="img-fluid "
                                                         width=20 /></a>
                                             </div>
@@ -375,7 +375,7 @@
                                                 </p>
                                                 <a href="#" class="edit-icon">
                                                     <img
-                                                        src="../../images/edit.png"
+                                                        src="../images/edit.png"
                                                         class="img-fluid "
                                                         width=20 /></a>
                                             </div>
@@ -401,7 +401,7 @@
                                                 </p>
                                                 <a href="#" class="edit-icon">
                                                     <img
-                                                        src="../../images/edit.png"
+                                                        src="../images/edit.png"
                                                         class="img-fluid "
                                                         width=20 /></a>
                                             </div>
@@ -437,7 +437,7 @@
                                                 </p>
                                                 <a href="#" class="edit-icon">
                                                     <img
-                                                        src="../../images/edit.png"
+                                                        src="../images/edit.png"
                                                         class="img-fluid "
                                                         width=20 /></a>
                                             </div>
@@ -477,7 +477,7 @@
             integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
             crossorigin="anonymous">
     </script>
-        <script src="../../js/app.js"></script>
+        <script src="../js/app.js"></script>
         <script>
         $(document).ready(function () {
             const accordion = $('#accordionExample');
