--- a/src/admin-panel/location-coverages.html
+++ b/src/admin-panel/location-coverages.html
@@ -39,7 +39,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
     <link rel="icon" href="images/favicon.png" type="image/gif" sizes="16x16">
-    <link rel="stylesheet" href="../../assets/css/main.css">
+    <link rel="stylesheet" href="../assets/css/main.css">
 </head>
 
 <body>
@@ -202,7 +202,7 @@
                                             class="d-flex align-items-center justify-content-between mt-2 pb-3">
                                             <p class="text-black  fs-18 fw-500  text-left">Locations
                                             </p>
-                                            <a href="#" class="edit-icon"> <img src="../../images/edit.png"
+                                            <a href="#" class="edit-icon"> <img src="../images/edit.png"
                                                     class="img-fluid " width=20 /></a>
                                         </div>
                                         <table class="w-100">
@@ -240,7 +240,7 @@
                                         class="d-flex align-items-center justify-content-between mt-2 pb-3">
                                         <p class="text-black  fs-18 fw-500  text-left">Limits
                                         </p>
-                                        <a href="#" class="edit-icon"> <img src="../../images/edit.png"
+                                        <a href="#" class="edit-icon"> <img src="../images/edit.png"
                                                 class="img-fluid " width=20 /></a>
                                     </div>
                                 <div class="row">
@@ -265,7 +265,7 @@
                                 class="d-flex align-items-center justify-content-between mt-2 pb-3">
                                 <p class="text-black  fs-18 fw-500  text-left">Deductible
                                 </p>
-                                <a href="#" class="edit-icon"> <img src="../../images/edit.png"
+                                <a href="#" class="edit-icon"> <img src="../images/edit.png"
                                         class="img-fluid " width=20 /></a>
                             </div>
                                 <div class="row">
@@ -280,7 +280,7 @@
                                 class="d-flex align-items-center justify-content-between mt-2 pb-3">
                                 <p class="text-black  fs-18 fw-500  text-left">Premium
                                 </p>
-                                <a href="#" class="edit-icon"> <img src="../../images/edit.png"
+                                <a href="#" class="edit-icon"> <img src="../images/edit.png"
                                         class="img-fluid " width=20 /></a>
                             </div>
                             <div class="row">
@@ -302,7 +302,7 @@
                                     class="d-flex align-items-center justify-content-between mt-2 pb-3">
                                     <p class="text-black  fs-18 fw-500  text-left">Property Coverages
                                     </p>
-                                    <a href="#" class="edit-icon"> <img src="../../images/edit.png"
+                                    <a href="#" class="edit-icon"> <img src="../images/edit.png"
                                             class="img-fluid " width=20 /></a>
                                 </div>
                                 <table class="w-100">
@@ -334,7 +334,7 @@
                                 class="d-flex align-items-center justify-content-between mt-2 pb-3">
                                 <p class="text-black  fs-18 fw-500  text-left">Mortgagee
                                 </p>
-                                <a href="#" class="edit-icon"> <img src="../../images/edit.png"
+                                <a href="#" class="edit-icon"> <img src="../images/edit.png"
                                         class="img-fluid " width=20 /></a>
                             </div>
                             <table class="w-100">
@@ -381,7 +381,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
     </script>
-    <script src="../../js/app.js"></script>
+    <script src="../js/app.js"></script>
     <script>
         $(document).ready(function () {
             const accordion = $('#accordionExample');
